// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTypescriptForSchema > Booleans 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminBooleans;

export interface AdminBooleansFields {
  boolean: boolean | null;
  booleanList: boolean[] | null;
}

export type AdminBooleans = AdminEntity<'Booleans', AdminBooleansFields, string>;

export function isAdminBooleans(entity: AdminEntity<string, object>): entity is AdminBooleans {
  return entity.info.type === 'Booleans';
}

export function assertIsAdminBooleans(entity: AdminEntity<string, object>): asserts entity is AdminBooleans {
  if (entity.info.type !== 'Booleans') {
    throw new Error('Expected info.type = Booleans (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > EntityTypes 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, EntityReference } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminEntityTypes;

export interface AdminEntityTypesFields {
  entityType: EntityReference | null;
  entityTypeList: EntityReference[] | null;
}

export type AdminEntityTypes = AdminEntity<'EntityTypes', AdminEntityTypesFields, string>;

export function isAdminEntityTypes(entity: AdminEntity<string, object>): entity is AdminEntityTypes {
  return entity.info.type === 'EntityTypes';
}

export function assertIsAdminEntityTypes(entity: AdminEntity<string, object>): asserts entity is AdminEntityTypes {
  if (entity.info.type !== 'EntityTypes') {
    throw new Error('Expected info.type = EntityTypes (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > Foo (no fields) 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminFoo;

export type AdminFooFields = Record<never, never>;

export type AdminFoo = AdminEntity<'Foo', AdminFooFields, string>;

export function isAdminFoo(entity: AdminEntity<string, object>): entity is AdminFoo {
  return entity.info.type === 'Foo';
}

export function assertIsAdminFoo(entity: AdminEntity<string, object>): asserts entity is AdminFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > Locations 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, Location } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminLocations;

export interface AdminLocationsFields {
  location: Location | null;
  locationList: Location[] | null;
}

export type AdminLocations = AdminEntity<'Locations', AdminLocationsFields, string>;

export function isAdminLocations(entity: AdminEntity<string, object>): entity is AdminLocations {
  return entity.info.type === 'Locations';
}

export function assertIsAdminLocations(entity: AdminEntity<string, object>): asserts entity is AdminLocations {
  if (entity.info.type !== 'Locations') {
    throw new Error('Expected info.type = Locations (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > Numbers 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminNumbers;

export interface AdminNumbersFields {
  number: number | null;
  numberInteger: number | null;
  numberList: number[] | null;
  numberIntegerList: number[] | null;
}

export type AdminNumbers = AdminEntity<'Numbers', AdminNumbersFields, string>;

export function isAdminNumbers(entity: AdminEntity<string, object>): entity is AdminNumbers {
  return entity.info.type === 'Numbers';
}

export function assertIsAdminNumbers(entity: AdminEntity<string, object>): asserts entity is AdminNumbers {
  if (entity.info.type !== 'Numbers') {
    throw new Error('Expected info.type = Numbers (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > RichTexts 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, RichText } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminRichTexts;

export interface AdminRichTextsFields {
  richText: RichText | null;
  richTextList: RichText[] | null;
}

export type AdminRichTexts = AdminEntity<'RichTexts', AdminRichTextsFields, string>;

export function isAdminRichTexts(entity: AdminEntity<string, object>): entity is AdminRichTexts {
  return entity.info.type === 'RichTexts';
}

export function assertIsAdminRichTexts(entity: AdminEntity<string, object>): asserts entity is AdminRichTexts {
  if (entity.info.type !== 'RichTexts') {
    throw new Error('Expected info.type = RichTexts (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > Strings 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminStrings;

export interface AdminStringsFields {
  string: string | null;
  stringList: string[] | null;
  values: 'bar' | 'baz' | 'foo' | null;
  valuesList: Array<'bar' | 'baz' | 'foo'> | null;
}

export type AdminStrings = AdminEntity<'Strings', AdminStringsFields, string>;

export function isAdminStrings(entity: AdminEntity<string, object>): entity is AdminStrings {
  return entity.info.type === 'Strings';
}

export function assertIsAdminStrings(entity: AdminEntity<string, object>): asserts entity is AdminStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > Unique index 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = 'slug';

export type AppAdminEntity = AdminStrings;

export interface AdminStringsFields {
  string: string | null;
}

export type AdminStrings = AdminEntity<'Strings', AdminStringsFields, string>;

export function isAdminStrings(entity: AdminEntity<string, object>): entity is AdminStrings {
  return entity.info.type === 'Strings';
}

export function assertIsAdminStrings(entity: AdminEntity<string, object>): asserts entity is AdminStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema > ValueItem (no fields) 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, ValueItem } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminValueItem;

export interface AdminValueItemFields {
  valueItem: AppAdminValueItem | null;
}

export type AdminValueItem = AdminEntity<'ValueItem', AdminValueItemFields, string>;

export function isAdminValueItem(entity: AdminEntity<string, object>): entity is AdminValueItem {
  return entity.info.type === 'ValueItem';
}

export function assertIsAdminValueItem(entity: AdminEntity<string, object>): asserts entity is AdminValueItem {
  if (entity.info.type !== 'ValueItem') {
    throw new Error('Expected info.type = ValueItem (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = AdminFoo;

export type AdminFooFields = Record<never, never>;

export type AdminFoo = ValueItem<'Foo', AdminFooFields>;

export function isAdminFoo(valueItem: ValueItem<string, object> | AdminFoo): valueItem is AdminFoo {
  return valueItem.type === 'Foo';
}

export function assertIsAdminFoo(valueItem: ValueItem<string, object> | AdminFoo): asserts valueItem is AdminFoo {
  if (valueItem.type !== 'Foo') {
    throw new Error('Expected type = Foo (but was ' + valueItem.type + ')');
  }
}
"
`;

exports[`generateTypescriptForSchema > ValueTypes 1`] = `
"import type { AdminClient, AdminEntity, AdminExceptionClient, ValueItem } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = AdminValueTypes;

export interface AdminValueTypesFields {
  valueType: AppAdminValueItem | null;
  valueTypeFoo: AdminFoo | null;
  valueTypeFooBar: AdminBar | AdminFoo | null;
  valueTypeList: AppAdminValueItem[] | null;
  valueTypeListFoo: AdminFoo[] | null;
  valueTypeListFooBar: Array<AdminBar | AdminFoo> | null;
}

export type AdminValueTypes = AdminEntity<'ValueTypes', AdminValueTypesFields, string>;

export function isAdminValueTypes(entity: AdminEntity<string, object>): entity is AdminValueTypes {
  return entity.info.type === 'ValueTypes';
}

export function assertIsAdminValueTypes(entity: AdminEntity<string, object>): asserts entity is AdminValueTypes {
  if (entity.info.type !== 'ValueTypes') {
    throw new Error('Expected info.type = ValueTypes (but was ' + entity.info.type + ')');
  }
}

export type AppAdminValueItem = AdminBar | AdminFoo;

export interface AdminBarFields {
  string: string | null;
}

export type AdminBar = ValueItem<'Bar', AdminBarFields>;

export function isAdminBar(valueItem: ValueItem<string, object> | AdminBar): valueItem is AdminBar {
  return valueItem.type === 'Bar';
}

export function assertIsAdminBar(valueItem: ValueItem<string, object> | AdminBar): asserts valueItem is AdminBar {
  if (valueItem.type !== 'Bar') {
    throw new Error('Expected type = Bar (but was ' + valueItem.type + ')');
  }
}

export interface AdminFooFields {
  string: string | null;
}

export type AdminFoo = ValueItem<'Foo', AdminFooFields>;

export function isAdminFoo(valueItem: ValueItem<string, object> | AdminFoo): valueItem is AdminFoo {
  return valueItem.type === 'Foo';
}

export function assertIsAdminFoo(valueItem: ValueItem<string, object> | AdminFoo): asserts valueItem is AdminFoo {
  if (valueItem.type !== 'Foo') {
    throw new Error('Expected type = Foo (but was ' + valueItem.type + ')');
  }
}
"
`;

exports[`generateTypescriptForSchema > empty 1`] = `
"import type { AdminClient, AdminExceptionClient } from '@dossierhq/core';

export type AppAdminClient = AdminClient<AppAdminEntity, AppAdminUniqueIndexes, AppAdminExceptionClient>;

export type AppAdminExceptionClient = AdminExceptionClient<AppAdminEntity, AppAdminUniqueIndexes>;

export type AppAdminUniqueIndexes = never;

export type AppAdminEntity = never;

export type AppAdminValueItem = never;
"
`;

exports[`generateTypescriptForSchema published > Unique index 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = 'slug';

export type AppPublishedEntity = PublishedStrings;

export interface PublishedStringsFields {
  string: string | null;
}

export type PublishedStrings = PublishedEntity<'Strings', PublishedStringsFields, string>;

export function isPublishedStrings(entity: PublishedEntity<string, object>): entity is PublishedStrings {
  return entity.info.type === 'Strings';
}

export function assertIsPublishedStrings(entity: PublishedEntity<string, object>): asserts entity is PublishedStrings {
  if (entity.info.type !== 'Strings') {
    throw new Error('Expected info.type = Strings (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedValueItem = never;
"
`;

exports[`generateTypescriptForSchema published > adminOnly entity type 1`] = `
"import type { PublishedClient, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = never;

export type AppPublishedValueItem = never;
"
`;

exports[`generateTypescriptForSchema published > adminOnly field 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = PublishedFoo;

export type PublishedFooFields = Record<never, never>;

export type PublishedFoo = PublishedEntity<'Foo', PublishedFooFields, string>;

export function isPublishedFoo(entity: PublishedEntity<string, object>): entity is PublishedFoo {
  return entity.info.type === 'Foo';
}

export function assertIsPublishedFoo(entity: PublishedEntity<string, object>): asserts entity is PublishedFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedValueItem = never;
"
`;

exports[`generateTypescriptForSchema published > empty 1`] = `
"import type { PublishedClient, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = never;

export type AppPublishedValueItem = never;
"
`;

exports[`generateTypescriptForSchema published > required fields 1`] = `
"import type { PublishedClient, PublishedEntity, PublishedExceptionClient } from '@dossierhq/core';

export type AppPublishedClient = PublishedClient<AppPublishedEntity, AppPublishedUniqueIndexes, AppPublishedExceptionClient>;

export type AppPublishedExceptionClient = PublishedExceptionClient<AppPublishedEntity, AppPublishedUniqueIndexes>;

export type AppPublishedUniqueIndexes = never;

export type AppPublishedEntity = PublishedFoo;

export interface PublishedFooFields {
  string: string;
  stringList: string[];
}

export type PublishedFoo = PublishedEntity<'Foo', PublishedFooFields, string>;

export function isPublishedFoo(entity: PublishedEntity<string, object>): entity is PublishedFoo {
  return entity.info.type === 'Foo';
}

export function assertIsPublishedFoo(entity: PublishedEntity<string, object>): asserts entity is PublishedFoo {
  if (entity.info.type !== 'Foo') {
    throw new Error('Expected info.type = Foo (but was ' + entity.info.type + ')');
  }
}

export type AppPublishedValueItem = never;
"
`;
